test/langtools/tools/javac/valhalla/lworld-values/ValueModifierTest.out
ValueModifierTest.java:15:13: compiler.err.cant.inherit.from.final: value
ValueModifierTest.java:15:21: compiler.err.concrete.supertype.for.inline.class: compiler.misc.anonymous.class: ValueModifierTest$2, value
ValueModifierTest.java:16:20: compiler.err.cant.inherit.from.final: value
ValueModifierTest.java:16:28: compiler.err.concrete.supertype.for.inline.class: compiler.misc.anonymous.class: ValueModifierTest$3, value
4 errors
